# BGMRPCConsole

./: .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  main.cpp  moc_client_interface.cpp_parameters  typescript
client/api/account/: initial.sh  login.sh  logout.sh  watch_state.sh
client/api/cms/: cd.sh  checkVim.sh  edit.sh  export.sh  export_todo.sh  import.sh  initial.sh  list.sh  new.sh  prepare_path.sh  remove.sh  update.sh  updateForm.cpp  watch_signal.sh  watch_state.sh
client/api/cms/vim/plugin/: WhispCMSBuf.vim  WhispCMSCmd.vim
client/api/default/: initial.sh  table.jq  watch_keepalive.sh  watch_state.sh
client/api/todo/: initial.sh  open.sh
client/vim/plugin/: WhispOutput.vim
client/watch/: watch_keepalive.sh  watch_state.sh
common/: daemon.xml
daemon/: BGStudio.BGMRPCConsoleDaemon.service  BGStudio.BGMRPCConsoleDaemon.service.in  CMakeLists.txt  bgmrpcclientdaemon.cpp  bgmrpcclientdaemon.h  bgmrpcconsoledaemon.cpp  bgmrpcconsoledaemon.h  main.cpp  moc_daemon_adaptor.cpp_parameters
